--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 	mavenCentral()
 }
 
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compile("org.springframework.boot:spring-boot-starter-thymeleaf:2.0.1.RELEASE") {
