add more detials

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
-spring.profiles.default=dev
-
 server.port=${PORT:5000}
 server.contextPath=/
 spring.data.rest.base-path=/api/v1
+#spring.data.rest.defaultMediaType = application/json
+
 debug=true
 
 # Spring data source needed for Spring boot to behave
