--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 		exclude group: 'org.hibernate', module: 'hibernate-core'
 	}
 
+	compile 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.1.RELEASE'
 	compile 'org.webjars:jquery:3.3.1'
 	compile 'org.webjars:jquery-ui:1.12.1'
 	//compile 'org.webjars:bootstrap:4.0.0'
